FIX: cell output aligne
Note: currently the content of the cells outputs is centered.
This commit updates the text alignment to the left side of the cells.

--- a/doc/source/_static/css/custom.css
+++ b/doc/source/_static/css/custom.css
@@ -31,3 +31,7 @@ nav.bd-links ul li.toctree-l4 > a {
     font-size: .8rem;
     text-indent: 3px;
 }
+
+div.cell_output {
+    text-align: left !important;
+}
